--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -8,8 +8,8 @@
 
   <meta name="author" content="{{ page.author }}" />
 
-  <link rel="stylesheet" href="css/base.css" type="text/css" media="screen, projection" />
-  <link rel="stylesheet" href="css/pygments.css" type="text/css" />
+  <link rel="stylesheet" href="{{ page.theme_dir }}/css/base.css" type="text/css" media="screen, projection" />
+  <link rel="stylesheet" href="{{ page.theme_dir }}/css/pygments.css" type="text/css" />
 </head>
 <body>
     <div class="row">
@@ -21,7 +21,7 @@
 
             <div class="ribbon">
                 <a href="{{ page.project_url }}">
-                    <img style="position: absolute; top: 0; right: 0; border: 0;z-index: 400;" src="images/ribbon.png" alt="Fork me on GitHub" />
+                    <img style="position: absolute; top: 0; right: 0; border: 0; z-index: 400;" src="{{ page.theme_dir }}/images/ribbon.png" alt="Fork me on GitHub" />
                 </a>
             </div>
         </header>
